@@ -1240,7 +1240,7 @@ CONFIG_RT2860V2_STA_LED=y
 # CONFIG_RT2860V2_STA_CARRIER is not set
 # CONFIG_RT2860V2_STA_DLS is not set
 # CONFIG_RT2860V2_RT3XXX_STA_ANTENNA_DIVERSITY is not set
-# CONFIG_RT2860V2_STA_VIDEO_TURBINE is not set
+CONFIG_RT2860V2_STA_VIDEO_TURBINE=y
 # CONFIG_RALINK_RT2880_STA_DBG is not set
 
 #
