@@ -351,7 +351,12 @@ static int __init flow_cache_init(void)
 					sizeof(struct flow_cache_entry),
 					0, SLAB_HWCACHE_ALIGN|SLAB_PANIC,
 					NULL, NULL);
+
+#ifdef CONFIG_RAETH_MEMORY_OPTIMIZATION
+	flow_hash_shift = 5;
+#else
 	flow_hash_shift = 10;
+#endif
 	flow_lwm = 2 * flow_hash_size;
 	flow_hwm = 4 * flow_hash_size;
 
