@@ -686,6 +686,7 @@
 66) Fix configure dns in vpn mode if uplink not send dns servers in pppd session.<br>
 67) Tune miniupnpd defaults.<br>
 68) Printserver p910nd use bidirection mode by default.<br>
+69) More optimize for small/save memory builds.<br>
 
 <br><br>
 <b>For support see:</b><br>
